Trying to deploy the project into vm